# tish

./: .codacy.yml  .dockerignore  .gitignore  .releaserc.json  CONTRIBUTING.md  Cargo.toml  LANGUAGE_REFERENCE.md  LICENSE  README.md  json  justfile  langtest.tish  out  package-lock.json  package.json  perf.md  release.config.cjs  release.full.config.json  tish_out
.config/: nextest.toml
Formula/: tish-bindgen.rb  tish.rb
crates/js_to_tish/: Cargo.toml  README.md
crates/js_to_tish/src/: error.rs  lib.rs  span_util.rs  transform.rs
crates/js_to_tish/src/transform/: expr.rs  stmt.rs
crates/tish/: Cargo.toml  build.rs
crates/tish/src/: cargo_native_registry.rs  cli_help.rs  main.rs  repl_completion.rs
crates/tish/tests/: cargo_example_compile.rs  error_source_location.rs  fs_parity.rs  fs_read_file_bytes.rs  integration_test.rs  process_capture.rs  run_optimize_stdout_parity.rs  scope_merge.rs  shortcircuit.rs  trycatch_runtime_errors.rs  tty_capability.rs
crates/tish/tests/fixtures/: fs_parity_callbacks.tish  fs_parity_promises.tish  fs_parity_sync.tish  process_capture.tish  read_file_bytes.tish  runtime_error_location.tish  trycatch_runtime_errors.tish  tty_capability.tish
crates/tish/tests/fixtures/cargo_example_project/: Cargo.toml  package.json
crates/tish/tests/fixtures/cargo_example_project/crates/demo-shim/: Cargo.toml
crates/tish/tests/fixtures/cargo_example_project/crates/demo-shim/src/: lib.rs
crates/tish/tests/fixtures/cargo_example_project/src/: main.tish
crates/tish_build_utils/: Cargo.toml
crates/tish_build_utils/src/: lib.rs
crates/tish_builtins/: Cargo.toml
crates/tish_builtins/src/: array.rs  collections.rs  construct.rs  date.rs  globals.rs  helpers.rs  iterator.rs  lib.rs  math.rs  number.rs  object.rs  string.rs  symbol.rs  typedarrays.rs
crates/tish_bytecode/: Cargo.toml
crates/tish_bytecode/src/: chunk.rs  compiler.rs  encoding.rs  lib.rs  opcode.rs  peephole.rs  serialize.rs
crates/tish_bytecode/tests/: append_local_string_builder.rs  break_continue_bytecode.rs  constant_folding.rs  math_unary_intrinsic.rs  shortcircuit.rs  sort_optimization.rs
crates/tish_compile/: Cargo.toml
crates/tish_compile/src/: check.rs  codegen.rs  infer.rs  lib.rs  platform_resolve.rs  resolve.rs  schemes.rs  types.rs
crates/tish_compile/tests/: dump_codegen.rs  perf_codegen_169_173.rs  perf_codegen_173_part3.rs  perf_codegen_174.rs  perf_codegen_175.rs  perf_codegen_176.rs  perf_codegen_177.rs  perf_codegen_178.rs  perf_codegen_178_rec.rs  perf_codegen_179.rs  perf_codegen_180.rs  perf_codegen_181.rs  perf_codegen_182.rs  perf_codegen_183.rs  perf_codegen_184.rs  perf_codegen_320.rs  perf_codegen_module_const_forof.rs  platform_resolve_cli.rs  regr_484_obj_field_param.rs  regr_e0382_typed_struct.rs  regr_f64_return_either.rs  regr_gba_numerics_gated.rs  regr_member_assign_expr.rs  regr_numeric_arg_whitelist.rs  regr_serve_closure.rs  regr_undefined_ident.rs
crates/tish_compile_js/: Cargo.toml
crates/tish_compile_js/examples/: jsx_vdom_smoke.tish
crates/tish_compile_js/src/: codegen.rs  error.rs  js_intrinsics.rs  lib.rs  resolve.rs  tests_jsx.rs
crates/tish_compile_js/tests/: bundle_exports.rs
crates/tish_compiler_wasm/: Cargo.toml
crates/tish_compiler_wasm/src/: lib.rs  resolve_virtual.rs
crates/tish_core/: Cargo.toml
crates/tish_core/src/: compat.rs  console_style.rs  json.rs  lib.rs  macros.rs  ops.rs  shape.rs  uri.rs  value.rs  vmref.rs
crates/tish_cranelift/: Cargo.toml
crates/tish_cranelift/src/: lib.rs  link.rs  lower.rs
crates/tish_cranelift_runtime/: Cargo.toml
crates/tish_cranelift_runtime/src/: lib.rs
crates/tish_eval/: Cargo.toml
crates/tish_eval/src/: eval.rs  http.rs  lib.rs  natives.rs  promise.rs  regex.rs  timers.rs  value.rs  value_convert.rs
crates/tish_ffi/: Cargo.toml
crates/tish_ffi/src/: lib.rs
crates/tish_ffi/tests/: double_free.rs  loader.rs
crates/tish_ffi/tests/fixtures/testmod/: Cargo.toml
crates/tish_ffi/tests/fixtures/testmod/src/: lib.rs
crates/tish_fmt/: Cargo.toml
crates/tish_fmt/src/: lib.rs
crates/tish_lint/: Cargo.toml
crates/tish_lint/src/: lib.rs
crates/tish_llvm/: Cargo.toml
crates/tish_llvm/src/: lib.rs
crates/tish_lsp/: Cargo.toml  README.md
crates/tish_lsp/src/: builtin_goto.rs  import_goto.rs  main.rs
crates/tish_mlx/: Cargo.toml
crates/tish_mlx/src/: lib.rs
crates/tish_native/: Cargo.toml
crates/tish_native/src/: build.rs  config.rs  lib.rs
crates/tish_opt/: Cargo.toml
crates/tish_opt/src/: lib.rs
crates/tish_parser/: Cargo.toml
crates/tish_parser/src/: lib.rs  parser.rs
crates/tish_pg/: Cargo.toml  README.md
crates/tish_pg/src/: error.rs  lib.rs
crates/tish_polars/: Cargo.toml
crates/tish_polars/src/: lib.rs
crates/tish_resolve/: Cargo.toml
crates/tish_resolve/src/: lib.rs  pos.rs
crates/tish_runtime/: Cargo.toml
crates/tish_runtime/src/: fs_ext.rs  http.rs  http_fetch.rs  http_hyper.rs  http_prefork.rs  lib.rs  native_promise.rs  promise.rs  promise_io.rs  pty.rs  timers.rs  tty.rs  ws.rs
crates/tish_runtime/tests/: fetch_readable_stream.rs  fetch_stream_lines.rs
crates/tish_runtime_gba/: Cargo.toml
crates/tish_runtime_gba/src/: gba.rs  lib.rs
crates/tish_ui/: Cargo.toml
crates/tish_ui/src/: jsx.rs  lib.rs
crates/tish_ui/src/runtime/: hooks.rs  mod.rs
crates/tish_vm/: Cargo.toml
crates/tish_vm/src/: jit.rs  lib.rs  vm.rs
crates/tish_vm/tests/: concurrent_shared_state.rs  lexical_scope_declare.rs  peephole_jump_chain_logical_or.rs  zzz_concurrency_probe.rs
crates/tish_vm/tests/fixtures/: or_string_cmd.tish
crates/tish_wasm/: Cargo.toml
crates/tish_wasm/src/: lib.rs
docs/: LANGUAGE.md  README.md  RELEASE.md  TISH_PG_FORWARD_README.md  TISH_PG_STANDALONE_ARCHIVE.md  architecture-next-steps.md  builtins-gap-analysis.md  code-audit-2026-06.md  concurrency-model.md  control-flow-audit.md  ecma-alignment.md  frame-vm-plan.md  full-backend-parity-plan.md  gba-target.md  http-techempower-status.md  js-emit-philosophy.md  js-target.md  jsc-bun-perf-guidance.md  language-spec.md  packed-arrays.md  (+13 more)
(+985 files in other folders)
