[workspace]
members = [
    "crates/tish_cranelift",
    "crates/tish_cranelift_runtime",
    "crates/tish_wasm_runtime",
    "crates/tish_core",
    "crates/tish_builtins",
    "crates/tish_bind",
    "crates/tish_lexer",
    "crates/tish_ast",
    "crates/tish_parser",
    "crates/tish_eval",
    "crates/tish_runtime",
    "crates/tish_compile",
    "crates/tish_compile_js",
    "crates/tish_bytecode",
    "crates/tish_vm",
    "crates/tish_native",
    "crates/tish_wasm",
    "crates/tish",
    "crates/js_to_tish",
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
