[workspace]
members = [
    "crates/tish_build_utils",
    "crates/tish_cranelift",
    "crates/tish_cranelift_runtime",
    "crates/tish_wasm_runtime",
    "crates/tish_core",
    "crates/tish_builtins",
    "crates/tish_lexer",
    "crates/tish_ast",
    "crates/tish_parser",
    "crates/tish_opt",
    "crates/tish_eval",
    "crates/tish_runtime",
    "crates/tish_compile",
    "crates/tish_compile_js",
    "crates/tish_bytecode",
    "crates/tish_vm",
    "crates/tish_llvm",
    "crates/tish_native",
    "crates/tish_wasm",
    "crates/tish",
    "crates/js_to_tish",
    "crates/tish_fmt",
    "crates/tish_lint",
    "crates/tish_lsp",
]
resolver = "2"

[workspace.package]
license-file = "LICENSE"
repository = "https://github.com/tish-lang/tish"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
