[package]
name = "tishlang_js_to_tish"
version = "0.1.0"
edition = "2021"
description = "Vanilla JavaScript to Tish AST converter"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
oxc = { version = "0.121", features = ["semantic"] }
tishlang_ast = { path = "../tish_ast" }
