[package]
name = "tishlang"
version = "0.0.0-dev"
edition = "2021"
description = "Tish CLI - run, REPL, compile to native"
license-file = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tish"
path = "src/main.rs"

[features]
# Default: secure mode with no dangerous capabilities
default = []
# Full: all capabilities enabled (for development/trusted environments)
full = ["http", "fs", "process", "regex", "ws"]
# Individual capability flags
http    = ["tishlang_eval/http",    "tishlang_runtime/http",    "tishlang_compile/http",    "tishlang_vm/http"]
fs      = ["tishlang_eval/fs",      "tishlang_runtime/fs",      "tishlang_compile/fs",      "tishlang_vm/fs"]
process = ["tishlang_eval/process", "tishlang_runtime/process", "tishlang_compile/process", "tishlang_vm/process"]
regex   = ["tishlang_eval/regex",   "tishlang_runtime/regex",   "tishlang_compile/regex",   "tishlang_vm/regex"]
ws      = ["tishlang_eval/ws",      "tishlang_runtime/ws",      "tishlang_compile/ws",      "tishlang_vm/ws"]
# GPU compute — Apple Silicon only
metal   = ["tishlang_eval/metal",   "tishlang_runtime/metal",   "tishlang_compile/metal",   "tishlang_vm/metal"]
mlx     = ["tishlang_eval/mlx",     "tishlang_runtime/mlx",     "tishlang_compile/mlx",     "tishlang_vm/mlx"]
[dependencies]
rustyline = { version = "17", features = ["with-file-history"] }
tishlang_lexer = { path = "../tish_lexer", version = ">=0.1" }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
tishlang_eval = { path = "../tish_eval", version = ">=0.1" }
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_compile_js = { path = "../tish_compile_js", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }
tishlang_vm = { path = "../tish_vm", version = ">=0.1" }
tishlang_native = { path = "../tish_native", version = ">=0.1" }
tishlang_llvm = { path = "../tish_llvm", version = ">=0.1" }
tishlang_wasm = { path = "../tish_wasm", version = ">=0.1" }
tishlang_runtime = { path = "../tish_runtime", version = ">=0.1" }
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_js_to_tish = { path = "../js_to_tish", version = ">=0.1" }
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
rayon = "1.11"
