[package]
name = "tishlang"
version = "0.0.0-dev"
edition = "2021"
description = "Tish CLI - run, REPL, compile to native"
license-file = { workspace = true }
repository = { workspace = true }

# tishlang_runtime has no direct source use here — it's required by the http/fs/process/
# regex/ws/tty feature-forwards below (`tishlang_runtime/<feat>`). cargo-machete only scans
# source, so it false-flags it; ignore it.
[package.metadata.cargo-machete]
ignored = ["tishlang_runtime"]

[[bin]]
name = "tish"
path = "src/main.rs"

[features]
# The published `tish` CLI always includes every optional runtime (http, timers, fs, process, regex, ws).
# Use `cargo build -p tishlang --no-default-features` when you need a locked-down toolchain
# (see workspace `justfile`). `tish run --feature …` / `tish build --feature …` gate what runs
# or what gets linked into a *native output* binary — they are not the primary way to ship a
# “full” vs “empty” CLI.
default = ["full", "fast-alloc"]
# Alias: same dependency edges as `default` (kept for `--features full` in CI and docs).
# Includes `pg` so `tish run` can resolve `import … from '@tishlang/pg'` (`cargo:tish_pg`) on the bytecode VM.
full = ["http", "fs", "process", "regex", "ws", "timers", "tty", "pg"]
# Fast allocator (mimalloc) as the process `#[global_allocator]`. tish's object/array/string workloads
# are allocation-bound (a sampling profile of object-heavy code spends ~14%+ in system malloc/free);
# mimalloc is markedly faster for the many-small-allocations pattern — the same reason JSC ships bmalloc.
# Semantically transparent (just a faster malloc); `--no-default-features` drops it for the system allocator.
fast-alloc = ["dep:mimalloc"]
# Opt-out: build without Postgres (`cargo build -p tishlang --no-default-features --features http,...`).
pg = ["dep:tishlang_pg"]
# Individual capability flags
http    = ["tishlang_eval/http",    "tishlang_runtime/http",    "tishlang_compile/http",    "tishlang_vm/http"]
timers  = ["tishlang_eval/timers",  "tishlang_compile/timers",  "tishlang_vm/timers"]
fs      = ["tishlang_eval/fs",      "tishlang_runtime/fs",      "tishlang_compile/fs",      "tishlang_vm/fs"]
process = ["tishlang_eval/process", "tishlang_runtime/process", "tishlang_compile/process", "tishlang_vm/process"]
regex   = ["tishlang_eval/regex",   "tishlang_runtime/regex",   "tishlang_compile/regex",   "tishlang_vm/regex"]
ws      = ["tishlang_eval/ws",      "tishlang_runtime/ws",      "tishlang_compile/ws",      "tishlang_vm/ws"]
tty     = ["tishlang_eval/tty",     "tishlang_runtime/tty",     "tishlang_compile/tty",     "tishlang_vm/tty"]
# GPU compute — Apple Silicon only
[dependencies]
rustyline = { version = "17", features = ["with-file-history"] }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
tishlang_eval = { path = "../tish_eval", version = ">=0.1" }
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_compile_js = { path = "../tish_compile_js", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }
tishlang_vm = { path = "../tish_vm", version = ">=0.1" }
tishlang_ffi = { path = "../tish_ffi", version = ">=0.1" }
tishlang_native = { path = "../tish_native", version = ">=0.1" }
tishlang_wasm = { path = "../tish_wasm", version = ">=0.1" }
tishlang_runtime = { path = "../tish_runtime", version = ">=0.1" }
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_js_to_tish = { path = "../js_to_tish", version = ">=0.1" }
clap = { version = "4.6.0", features = ["derive", "color"] }
serde_json = "1"
tishlang_pg = { path = "../tish_pg", version = ">=0.1", optional = true }
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
rayon = "1.11"
tempfile = "3"
