[package]
name = "tishlang_builtins"
version = "0.1.0"
edition = "2021"
description = "Shared builtin implementations for Tish (array, string, object, math)"


license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
rand = "0.10.0"
tishlang_core = { path = "../tish_core", version = ">=0.1" }

[features]
default = []
regex = ["tishlang_core/regex"]
