[package]
name = "tishlang_builtins"
version = "0.1.0"
edition = "2021"
description = "Shared builtin implementations for Tish (array, string, object, math)"


license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
rand = "0.10.1"
tishlang_core = { path = "../tish_core", version = ">=0.1" }

[features]
default = []
regex = ["tishlang_core/regex"]
# Propagate the `send-values` feature from `tishlang_core` so that closures
# handed to us via `NativeFn` pick up the `Send + Sync` bound automatically
# when multi-threaded `Value`s are enabled upstream.
send-values = ["tishlang_core/send-values"]
