[package]
name = "tish_bytecode"
version = "0.1.0"
edition = "2021"
description = "Bytecode compiler for Tish (AST → bytecode)"

[dependencies]
tish_ast = { path = "../tish_ast" }
tish_core = { path = "../tish_core" }

[dev-dependencies]
tish_compile = { path = "../tish_compile" }
tish_parser = { path = "../tish_parser" }
tish_opt = { path = "../tish_opt" }
tish_vm = { path = "../tish_vm" }
