[package]
name = "tishlang_bytecode"
version = "0.1.0"
edition = "2021"
description = "Bytecode compiler for Tish (AST → bytecode)"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_ast = { path = "../tish_ast" }
tishlang_core = { path = "../tish_core" }

[dev-dependencies]
tishlang_compile = { path = "../tish_compile" }
tishlang_parser = { path = "../tish_parser" }
tishlang_opt = { path = "../tish_opt" }
tishlang_vm = { path = "../tish_vm" }
