[package]
name = "tishlang_bytecode"
version = "0.1.0"
edition = "2021"
description = "Bytecode compiler for Tish (AST → bytecode)"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_core = { path = "../tish_core", version = ">=0.1" }

[dev-dependencies]
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }
