[package]
name = "tish_compile"
version = "0.1.0"
edition = "2021"
description = "Tish native compiler backend"

[features]
default = []
http = []
fs = []
process = []
regex = []

[dependencies]
tish_ast = { path = "../tish_ast" }
tish_parser = { path = "../tish_parser" }
serde_json = "1.0"

[dev-dependencies]
