[package]
name = "tishlang_compile"
version = "0.1.0"
edition = "2021"
description = "Tish native compiler backend"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
http = []
fs = []
process = []
regex = []
ws = []

[dependencies]
tishlang_ast = { path = "../tish_ast" }
tishlang_opt = { path = "../tish_opt" }
tishlang_parser = { path = "../tish_parser" }
serde_json = "1.0"

[dev-dependencies]
