[package]
name = "tishlang_compile_js"
version = "0.1.0"
edition = "2021"
description = "Tish to JavaScript transpiler backend"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []

[dependencies]
tishlang_jsx_web = { path = "../tish_jsx_web" }

tishlang_ast = { path = "../tish_ast" }
tishlang_compile = { path = "../tish_compile" }
tishlang_opt = { path = "../tish_opt" }
tishlang_parser = { path = "../tish_parser" }
