[package]
name = "tishlang_compile_js"
version = "0.1.0"
edition = "2021"
description = "Tish to JavaScript transpiler backend"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []

[dependencies]
tishlang_jsx_web = { path = "../tish_jsx_web", version = ">=0.1" }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
