[package]
name = "tishlang_compiler_wasm"
version = "0.1.0"
edition = "2021"
description = "Tish compiler as WASM for browser (parse + bytecode + JS)"
license-file = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
serde_json = "1.0"
wasm-bindgen = "0.2"

tishlang_ast = { path = "../tish_ast" }
tishlang_bytecode = { path = "../tish_bytecode" }
tishlang_compile_js = { path = "../tish_compile_js" }
tishlang_opt = { path = "../tish_opt" }
tishlang_parser = { path = "../tish_parser" }
