[package]
name = "tish_cranelift"
version = "0.1.0"
edition = "2021"
description = "Bytecode to native via Cranelift"

[dependencies]
tish_build_utils = { path = "../tish_build_utils" }
cranelift = "0.130"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
cranelift-object = "0.130"
target-lexicon = "0.13"
tish_bytecode = { path = "../tish_bytecode" }
tish_core = { path = "../tish_core" }
