[package]
name = "tishlang_cranelift"
version = "0.1.0"
edition = "2021"
description = "Bytecode to native via Cranelift"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_build_utils = { path = "../tish_build_utils" }
cranelift = "0.130"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
cranelift-object = "0.130"
target-lexicon = "0.13"
tishlang_bytecode = { path = "../tish_bytecode" }
tishlang_core = { path = "../tish_core" }
