[package]
name = "tishlang_cranelift"
version = "0.1.0"
edition = "2021"
description = "Bytecode to native via Cranelift"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_build_utils = { path = "../tish_build_utils", version = ">=0.1" }
cranelift = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
cranelift-object = "0.130"
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
