[package]
name = "tishlang_cranelift_runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime for Cranelift-compiled Tish bytecode"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
fs = ["tishlang_vm/fs"]
process = ["tishlang_vm/process"]
http = ["tishlang_vm/http"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tishlang_bytecode = { path = "../tish_bytecode" }
tishlang_vm = { path = "../tish_vm" }
tishlang_core = { path = "../tish_core" }
