[package]
name = "tish_eval"
version = "0.1.0"
edition = "2021"
description = "Tish tree-walk interpreter"

[features]
default = []
http = ["tokio", "reqwest", "futures", "tiny_http", "tish_core/regex"]
fs = []
process = []
regex = ["dep:fancy-regex", "tish_core/regex"]
tokio = ["dep:tokio"]

[dependencies]
rand = "0.10.0"
tish_ast = { path = "../tish_ast" }
tish_parser = { path = "../tish_parser" }
tish_core = { path = "../tish_core" }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"], optional = true }
futures = { version = "0.3.32", optional = true }
tiny_http = { version = "0.12.0", optional = true }
fancy-regex = { version = "0.17.0", optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "sync"], optional = true }
