[package]
name = "tishlang_fmt"
version = "0.1.0"
edition = "2021"
description = "Opinionated formatter for Tish source (parse → pretty-print)"
license-file = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tish-fmt"
path = "src/bin/tish-fmt.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tishlang_ast = { path = "../tish_ast" }
tishlang_parser = { path = "../tish_parser" }
