[package]
name = "tishlang_lint"
version = "0.1.0"
edition = "2021"
description = "AST-based linter for Tish"
license-file = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tish-lint"
path = "src/bin/tish-lint.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
