[package]
name = "tishlang_llvm"
version = "0.1.0"
edition = "2021"
description = "LLVM backend for Tish (bytecode → native via clang/LLVM)"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_cranelift = { path = "../tish_cranelift", version = ">=0.1" }
tishlang_build_utils = { path = "../tish_build_utils", version = ">=0.1" }
